--- a/data/olan_cleaning.ipynb
+++ b/data/olan_cleaning.ipynb
@@ -28,17 +28,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import os\n",
     "#import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,21 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-5ad7c2c41108>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m#df_tr.head(10)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mMarijuanaArrests\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"cleandata/COMarijuanaArrests.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m#MarijuanaArrests.drop(columns=['Age Group', 'Gender', 'Race Code'], inplace=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#df = pd.read_csv(\"rawdata/Olan-DPS-Colorado-Marijuana-Arrests.csv\")\n",
     "#df.to_csv(\"cleandata/COMarijuanaArrestsbyCounties.csv\", index=False)\n",
@@ -176,15 +165,18 @@
     "#MarijuanaArrests['County'] = MarijuanaArrests['County'].replace([None],\"Location not Available\")\n",
     "#MarijuanaArrests['County'] = MarijuanaArrests['County'].replace([\"Acet (All Crimes Enforcement Team)\"],\"Location not Available\")\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
+    "#Clean = pd.read_csv(\"cleandata/COMarijuanaArrests.csv\")\n",
+    "#Clean = Clean.groupby(['Year', 'County', 'Offense Type']).sum()\n",
     "\n",
     "#MarijuanaArrests.to_csv(\"cleandata/COMarijuanaArrests.csv\", index=False)\n",
+    "#Clean.to_csv(\"cleandata/GROUPEDArrests.csv\")\n",
     "\n",
-    "#MarijuanaArrests.head()"
+    "#Clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,10 +192,84 @@
     "#MJOffenses.columns = ['Year', 'County', 'Offense Type', 'Number of Offenses']\n",
     "#MJOffenses['County'] = MJOffenses['County'].replace([None],\"Location not Available\")\n",
     "#-------------------------------------------------------------------------------------------------------------------\n",
+    "#Group = pd.read_csv('cleandata/COMarijuanaOffenses.csv')\n",
+    "#Group = Group.groupby(['Year', 'County', 'Offense Type']).sum()\n",
     "#MJOffenses.to_csv(\"cleandata/COMarijuanaOffenses.csv\", index=False)\n",
+    "#Group.to_csv(\"cleandata/GROUPEDOffenses.csv\")\n",
     "\n",
-    "#MJOffenses.head(20)"
+    "#MJOffenses.head(20)\n",
+    "#Group.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Arrests = pd.read_csv(\"cleandata/GROUPEDArrests.csv\")\n",
+    "#Offenses = pd.read_csv(\"cleandata/GROUPEDOffenses.csv\")\n",
+    "\n",
+    "#column_appended_data = pd.concat([Arrests, Offenses], axis=\"rows\", join=\"outer\")\n",
+    "#NewColumn = column_appended_data.groupby(['Year', 'County', 'Offense Type']).sum()\n",
+    "#NewColumn.to_csv(\"cleandata/GROUPEDArrestsOffenses.csv\")\n",
+    "\n",
+    "#Arrests.head(10)\n",
+    "#Offenses.head(10)\n",
+    "#column_appended_data.head(30)\n",
+    "#NewColumn.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#GEOCODES CLEANING\n",
+    "#df = pd.read_csv(\"rawdata/Geocodes_USA_with_Counties.csv\")\n",
+    "#df.to_csv(\"cleandata/CountyGeocodes\", index=False)\n",
+    "#Geo = pd.read_csv(\"cleandata/CountyGeocodes\")\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "#Geo.drop(columns=['zip', 'primary_city', 'decommissioned', 'estimated_population', 'world_region', 'country', 'type', 'notes'], inplace=True)\n",
+    "#Geo= Geo[(Geo.state=='CO')]\n",
+    "#Geo = Geo.drop_duplicates(subset=['county'])\n",
+    "#Geo.dropna(inplace=True)\n",
+    "#Geo.reset_index()\n",
+    "#-------------------------------------------------------------------------------------------------------------------\n",
+    "#Geo.to_csv(\"cleandata/CountyGeocodes\", index=False)\n",
+    "\n",
+    "#Geo.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OAdf = pd.read_csv(\"cleandata/GROUPEDArrestsOffenses.csv\")\n",
+    "#Geodf = pd.read_csv(\"cleandata/CountyGeocodes.csv\")\n",
+    "\n",
+    "#Geodf.drop(columns=['state'], inplace=True)\n",
+    "#Geodf.columns = ['latitude', 'longtitude', 'County']\n",
+    "\n",
+    "\n",
+    "#Codes = OAdf.set_index('County').combine_first(Geodf.set_index('County')).reset_index()\n",
+    "#Codes = Codes[['Year', 'County', 'latitude', 'longtitude', 'Offense Type', 'Number of Arrests', 'Number of Offenses']]\n",
+    "#Codes.dropna(inplace=True)\n",
+    "\n",
+    "#Codes.to_csv(\"cleandata/FinalizedCrimeStats.csv\", index=False)\n",
+    "#Codes.head(10)\n",
+    "#Geodf.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
