finally got FIPS in the data files

--- a/data/rawdata/test_experiments/James/james_cleaningBEFORE_FIPS.ipynb
+++ b/data/rawdata/test_experiments/James/james_cleaningBEFORE_FIPS.ipynb
@@ -28,19 +28,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'rawdata/James-CO-FIPS.tsv'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-1e07331ee0c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Open the csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf8'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mcsvreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"\\t\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'rawdata/James-CO-FIPS.tsv'"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "          Fips   County\n",
+       "0         08001   Adams\n",
+       "1       08003   Alamosa\n",
+       "2      08005   Arapahoe\n",
+       "3     08007   Archuleta\n",
+       "4          08009   Baca\n",
+       "5          08011   Bent\n",
+       "6       08013   Boulder\n",
+       "7       08015   Chaffee\n",
+       "8      08017   Cheyenne\n",
+       "9   08019   Clear Creek\n",
+       "10      08021   Conejos\n",
+       "11     08023   Costilla\n",
+       "12      08025   Crowley\n",
+       "13       08027   Custer\n",
+       "14        08029   Delta\n",
+       "15       08031   Denver\n",
+       "16      08033   Dolores\n",
+       "17      08035   Douglas\n",
+       "18        08037   Eagle\n",
+       "19       08039   Elbert\n",
+       "20      08041   El Paso\n",
+       "21      08043   Fremont\n",
+       "22     08045   Garfield\n",
+       "23       08047   Gilpin\n",
+       "24        08049   Grand\n",
+       "25     08051   Gunnison\n",
+       "26     08053   Hinsdale\n",
+       "27     08055   Huerfano\n",
+       "28      08057   Jackson\n",
+       "29    08059   Jefferson\n",
+       "..                  ...\n",
+       "33     08067   La Plata\n",
+       "34      08069   Larimer\n",
+       "35   08071   Las Animas\n",
+       "36      08073   Lincoln\n",
+       "37        08075   Logan\n",
+       "38         08077   Mesa\n",
+       "39      08079   Mineral\n",
+       "40       08081   Moffat\n",
+       "41    08083   Montezuma\n",
+       "42     08085   Montrose\n",
+       "43       08087   Morgan\n",
+       "44        08089   Otero\n",
+       "45        08091   Ouray\n",
+       "46         08093   Park\n",
+       "47     08095   Phillips\n",
+       "48       08097   Pitkin\n",
+       "49      08099   Prowers\n",
+       "50       08101   Pueblo\n",
+       "51   08103   Rio Blanco\n",
+       "52   08105   Rio Grande\n",
+       "53        08107   Routt\n",
+       "54     08109   Saguache\n",
+       "55     08111   San Juan\n",
+       "56   08113   San Miguel\n",
+       "57     08115   Sedgwick\n",
+       "58       08117   Summit\n",
+       "59       08119   Teller\n",
+       "60   08121   Washington\n",
+       "61         08123   Weld\n",
+       "62         08125   Yuma\n",
+       "\n",
+       "[63 rows x 1 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Fips   County</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>08001   Adams</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>08003   Alamosa</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>08005   Arapahoe</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>08007   Archuleta</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>08009   Baca</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>08011   Bent</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>08013   Boulder</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>08015   Chaffee</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>08017   Cheyenne</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>08019   Clear Creek</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>08021   Conejos</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>08023   Costilla</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>08025   Crowley</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>08027   Custer</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>08029   Delta</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>08031   Denver</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>08033   Dolores</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>08035   Douglas</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>08037   Eagle</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>08039   Elbert</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>08041   El Paso</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>08043   Fremont</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>08045   Garfield</td>\n    </tr>\n    <tr>\n      <th>23</th>\n      <td>08047   Gilpin</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>08049   Grand</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>08051   Gunnison</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>08053   Hinsdale</td>\n    </tr>\n    <tr>\n      <th>27</th>\n      <td>08055   Huerfano</td>\n    </tr>\n    <tr>\n      <th>28</th>\n      <td>08057   Jackson</td>\n    </tr>\n    <tr>\n      <th>29</th>\n      <td>08059   Jefferson</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>33</th>\n      <td>08067   La Plata</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>08069   Larimer</td>\n    </tr>\n    <tr>\n      <th>35</th>\n      <td>08071   Las Animas</td>\n    </tr>\n    <tr>\n      <th>36</th>\n      <td>08073   Lincoln</td>\n    </tr>\n    <tr>\n      <th>37</th>\n      <td>08075   Logan</td>\n    </tr>\n    <tr>\n      <th>38</th>\n      <td>08077   Mesa</td>\n    </tr>\n    <tr>\n      <th>39</th>\n      <td>08079   Mineral</td>\n    </tr>\n    <tr>\n      <th>40</th>\n      <td>08081   Moffat</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>08083   Montezuma</td>\n    </tr>\n    <tr>\n      <th>42</th>\n      <td>08085   Montrose</td>\n    </tr>\n    <tr>\n      <th>43</th>\n      <td>08087   Morgan</td>\n    </tr>\n    <tr>\n      <th>44</th>\n      <td>08089   Otero</td>\n    </tr>\n    <tr>\n      <th>45</th>\n      <td>08091   Ouray</td>\n    </tr>\n    <tr>\n      <th>46</th>\n      <td>08093   Park</td>\n    </tr>\n    <tr>\n      <th>47</th>\n      <td>08095   Phillips</td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>08097   Pitkin</td>\n    </tr>\n    <tr>\n      <th>49</th>\n      <td>08099   Prowers</td>\n    </tr>\n    <tr>\n      <th>50</th>\n      <td>08101   Pueblo</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>08103   Rio Blanco</td>\n    </tr>\n    <tr>\n      <th>52</th>\n      <td>08105   Rio Grande</td>\n    </tr>\n    <tr>\n      <th>53</th>\n      <td>08107   Routt</td>\n    </tr>\n    <tr>\n      <th>54</th>\n      <td>08109   Saguache</td>\n    </tr>\n    <tr>\n      <th>55</th>\n      <td>08111   San Juan</td>\n    </tr>\n    <tr>\n      <th>56</th>\n      <td>08113   San Miguel</td>\n    </tr>\n    <tr>\n      <th>57</th>\n      <td>08115   Sedgwick</td>\n    </tr>\n    <tr>\n      <th>58</th>\n      <td>08117   Summit</td>\n    </tr>\n    <tr>\n      <th>59</th>\n      <td>08119   Teller</td>\n    </tr>\n    <tr>\n      <th>60</th>\n      <td>08121   Washington</td>\n    </tr>\n    <tr>\n      <th>61</th>\n      <td>08123   Weld</td>\n    </tr>\n    <tr>\n      <th>62</th>\n      <td>08125   Yuma</td>\n    </tr>\n  </tbody>\n</table>\n<p>63 rows × 1 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 18
     }
    ],
    "source": [
