--- a/notebooks/olan.ipynb
+++ b/notebooks/olan.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#TOTAL COLORADO GDP BY COUNTY\n",
     "TotalGDP = pd.read_csv(\"../data/cleandata/COGDPbyCounties-Totals.csv\")\n",
     "TotalGDP.set_index(\"Location\", inplace=True)\n",
-    "#TotalGDP = TotalGDP.transpose()\n",
+    "TotalGDP = TotalGDP.transpose()\n",
     "\n",
     "%matplotlib qt\n",
     "\n",
@@ -232,9 +232,9 @@
     "dx, dy = .8, .8\n",
     "\n",
     "# prepare 3d axes\n",
-    "fig = plt.figure(figsize=(8,5))\n",
+    "fig = plt.figure(figsize=(7,5))\n",
     "ax = Axes3D(fig)\n",
-    "plt.ticklabel_format(style='plain', axis='y')\n",
+    "\n",
     "\n",
     "# set up positions for the bars \n",
     "xpos=np.arange(TotalGDP.shape[0])\n",
@@ -258,6 +258,8 @@
     "\n",
     "# plot \n",
     "ax.bar3d(xpos,ypos,zpos,dx,dy,dz)\n",
+    "ax.set_zlim3d(43000,71000000)\n",
+    "#ax.set_zlim3d(43000,71000000)\n",
     "\n",
     "# put the column / index labels\n",
     "ax.w_yaxis.set_ticklabels(TotalGDP.columns)\n",
@@ -266,8 +268,9 @@
     "# name the axes\n",
     "ax.set_xlabel('Year')\n",
     "ax.set_ylabel('County')\n",
-    "ax.set_zlabel('Count')\n",
+    "ax.set_zlabel('Amount')\n",
     "\n",
+    "#plt.ticklabel_format(style='plain', axis='y')\n",
     "plt.show()\n"
    ]
   },
