--- a/notebooks/jackie.ipynb
+++ b/notebooks/jackie.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit ('base': conda)",
+   "name": "python3",
    "display_name": "Python 3.8.3 64-bit ('base': conda)",
    "metadata": {
     "interpreter": {
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,11 +57,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "source": [
-    "load_dotenv("
+    "load_dotenv()"
    ]
   },
   {
